CHANGELOG

v1.1 - 10/09/2012
  - introduced shortcode support
  - fixed Chrome animation artifacts bug
  - fixed FF15 stitch theme bug

v1.0.1 - 06/02/12
 - Corrected folder name
 - Added 'wmode' to list of permitted attributes 

v1.0 - 04/02/12
 - Initial release