@@ -2,6 +2,7 @@ CHANGELOG
 
 v1.1 - 10/09/2012
   - introduced shortcode support
+    - NB: embedded shortcodes must be executable outside of 'the loop' to work, some plugins don't support this
   - fixed Chrome animation artifacts bug
   - fixed FF15 stitch theme bug
 
